# transfection

./: .gitignore  README.md  delivery-expression-analyze.ps1  delivery-expression-analyze.sh  delivery-slide-wizard.ps1  delivery-slide-wizard.sh  install.ps1  install.sh  pyproject.toml  transfection-analyze.ps1  transfection-analyze.sh  transfection-slide.ps1  transfection-slide.sh
delivery/: __init__.py  cli.py
delivery/expression/: __init__.py  auc.py  fit.py  paths.py  plot_auc.py  plot_fit.py  plot_timeseries.py  slide_labels.py  timeseries.py
delivery/slide/: __init__.py
examples/: plot_artifacts.py  plot_fig4_panels.py  plot_single_panel.py
lisca/: __init__.py  acdc.py
lisca/analysis/: __init__.py  binding.py  events.py  roi.py
lisca/data/: __init__.py  bbox.py  manifest.py  nd2.py  roi.py  slide.py  tiff.py
scripts/: plot_fig4_panels_v2.py  plot_fig7_coculture_traces.py
src/transfection/: app.py  core.py  main.py
src/transfection/analyze/: __init__.py  auc.py  fit.py  paths.py  plot_auc.py  plot_fit.py  plot_layout.py  plot_timeseries.py  timeseries.py
src/transfection/commands/: __init__.py  auc.py  check_segment.py  fit.py  plot_auc.py  plot_fit.py  plot_timeseries.py  segment.py  slide.py  timeseries.py
src/transfection/core/: __init__.py  constants.py  export.py  mask.py  metrics.py  roi.py  segment.py  slide.py  workspace.py
src/transfection/services/: __init__.py  auc.py  check_segment.py  (+7 more)
transfection/: __init__.py  __main__.py  cli.py
transfection/analysis/: __init__.py  roi.py  trace_fluor.py
transfection/analyze/: auc.py  cli.py  fit.py  plot_auc.py  plot_fit.py  plot_timeseries.py  slide_labels.py
transfection/data/: __init__.py  roi.py  slide.py
transfection/slide/: __init__.py  cli.py
(+2 files in other folders)
