[project]
name = "delivery"
version = "0.2.0"
description = "Delivery-specific ROI extraction and comparison workflows."
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.8",
  "nd2>=0.10",
  "numpy>=1.26",
  "pandas>=2.2.3,<2.3",
  "tifffile>=2025.3.13",
  "typer>=0.12",
]

[project.scripts]
delivery = "delivery.cli:main"

[build-system]
requires = ["hatchling", "pathspec<0.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["delivery", "lisca"]
