[project]
name = "transfection"
version = "0.2.0"
description = "Microscopy ROI extraction, slide mapping, and timeseries metrics."
requires-python = ">=3.12"
dependencies = [
  "markdown-it-py>=3.0,<4",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2.3,<2.3",
  "tifffile>=2025.3.13",
  "typer>=0.12",
]

[project.scripts]
transfection = "transfection.cli:main"

[build-system]
requires = ["hatchling", "pathspec<0.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transfection"]
