[project]
name = "transfection"
version = "0.1.3"
description = "Microscopy ROI extraction, slide mapping, and timeseries metrics."
requires-python = ">=3.12"
dependencies = [
  "imageio",
  "imageio-ffmpeg",
  "markdown-it-py<4",
  "matplotlib",
  "numpy",
  "openpyxl>=3.1.5",
  "pandas<3",
  "tifffile",
  "typer",
]

[project.scripts]
transfection = "transfection.main:main"

[build-system]
requires = ["hatchling", "pathspec<0.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transfection"]
